# frontend

./: Cargo.toml  Dioxus.toml  README.md  flake.nix  rust-toolchain.toml
mobile/: Cargo.toml
mobile/assets/: AndroidManifest.xml  main.css  theme.css
mobile/src/: main.rs  platform.rs
mobile/src/api/: error.rs  mod.rs
mobile/src/api/types/: auth.rs  feed.rs  index.rs  list.rs  mod.rs  search.rs  tag.rs  user.rs
mobile/src/components/: activity.rs  container.rs  feed_list.rs  header.rs  mod.rs  navbar.rs  popup.rs
mobile/src/hooks/: mod.rs  use_auth.rs  use_keyboard_open.rs
mobile/src/platform/: mod.rs
mobile/src/platform/decor/: android.rs  mod.rs
mobile/src/platform/email/: android.rs  mod.rs
mobile/src/platform/gesture/: android.rs  mod.rs
mobile/src/platform/share/: ios.rs  mod.rs
mobile/src/platform/storage/: android.rs  mod.rs  store.rs
mobile/src/share/: android.rs  mod.rs
mobile/src/storage/: android.rs  ios.rs  mod.rs  store.rs
mobile/src/views/: home.rs  login.rs  mod.rs  register.rs
mobile/src/views/auth/: login.rs  mod.rs  reset_password.rs  reset_password_confirm.rs  sign_up.rs  validation.rs  verify_email.rs
mobile/src/views/auth/components/: container.rs  header.rs  mod.rs
mobile/src/views/dashboard/: add_feed.rs  feed.rs  list.rs  mod.rs  search.rs
mobile/src/views/dashboard/components/: feed_item_list.rs  feed_list.rs  header.rs  mod.rs  navbar.rs
mobile/src/views/reader/: feed_reader.rs  mod.rs  parsed_reader.rs
mobile/src/views/reader/components/: byline.rs  document.rs  header.rs  mod.rs  title.rs
ui/: Cargo.toml
ui/src/: header.rs  lib.rs
ui/src/forms/: button.rs  code_input.rs  input.rs  mod.rs
ui/src/icons/: apple.rs  archive_box.rs  arrow_top_right_on_square.rs  bars3.rs  beaker.rs  book_open.rs  bookmark.rs  checkbox.rs  cog.rs  envelope.rs  envelope_open.rs  google.rs  information.rs  lock.rs  mod.rs  newspaper.rs  plus.rs  queue.rs  search.rs  share.rs  star.rs  text_settings.rs  user.rs
ui/src/layout/: column.rs  mod.rs  overflow.rs  row.rs  spacer.rs
