[workspace]
resolver = "2"
members = [
    "ui",
    "web",
    "desktop",
    "mobile",
]

[workspace.dependencies]
dioxus = { git = "https://github.com/bind-labs/dioxus", branch = "android-perms-deps" }
tracing = "0.1.41"

# workspace
ui = { path = "ui" }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

