[package]
name = "mobile"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
dioxus = { workspace = true, features = ["router"] }
jni = "0.21.1"
regex = "1.11.1"
reqwest = { version = "0.12.15", default-features = false, features = ["json", "rustls-tls"] }
serde = "1.0.219"
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
tracing.workspace = true
ui.workspace = true
web-sys = { version = "0.3.77", features = ["Window", "Event", "EventListener", "VisualViewport"] }
zxcvbn = "3.1.0"

[features]
default = ["mobile"]
mobile = ["dioxus/mobile"]
