[package]
name = "mobile"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing.workspace = true
ui.workspace = true

dioxus = { workspace = true, features = ["router"] }
jni = "0.21.1"
reqwest = { version = "0.12.15", default-features = false, features = ["json", "rustls-tls"] }
serde = "1.0.219"
serde_json = "1.0.140"

tokio = { version = "1.45.1", features = ["full"] }
chrono = { version = "0.4.41", features = ["serde"] }
zxcvbn = "3.1.0"
regex = "1.11.1"
thiserror = "2.0.12"
rand = "0.9.1"

[features]
default = ["mobile"]
mobile = ["dioxus/mobile"]
